--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
@@ -5,9 +5,9 @@
         <div class="small-12 medium-9 columns creator-title">
             <i class="fi-torso"></i>
 
-            <span class="note-creator" title="{{notebook_obj.created_by|get_username}}">{{notebook_obj.created_by|get_username|truncatechars:"10"}}</span>
+            <span class="note-creator" title="{{node.created_by|get_username}}">{{node.created_by|get_username|truncatechars:"10"}}</span>
             &#8226;
-            <span class="note-creation-date">{{notebook_obj.created_at|date:"d M Y h:i A"}}</span>
+            <span class="note-creation-date">{{node.created_at|date:"d M Y h:i A"}}</span>
         </div>
         <div class="small-12 medium-3 columns creator-rating">
             {# <div>Your rating</div> #}
@@ -27,31 +27,31 @@
     <div class="row note-content">
         <div class="small-12 columns">
             <div class="note-header row">
-                <span class="note-title">{{notebook_obj.name}}</span>{% include "ndf/analytics_views.html" %}
-                {% if notebook_obj.tags %}
+                <span class="note-title">{{node.name}}</span>{% include "ndf/analytics_views.html" %}
+                {% if node.tags %}
                 <div class="note-tags">
-                {% for each_tag in notebook_obj.tags %}
+                {% for each_tag in node.tags %}
                     <a>{{each_tag}}</a>
                 {% endfor %}
                 </div>
                 {% endif %}
-                {% if is_gstaff or notebook_obj.created_by == request.user.id %}
-                    <a href="{% url 'page_create_edit' group_id notebook_obj.pk %}?course_event_id={{group_id}}&blog_type=True" class="fi-pencil" style="float:right;">Edit</a>
+                {% if is_gstaff or node.created_by == request.user.id %}
+                    <a href="{% url 'page_create_edit' group_id node.pk %}?course_event_id={{group_id}}&blog_type=True" class="fi-pencil" style="float:right;">Edit</a>
                 {% endif %}
             </div>
             <div class="note-text row">
-            {{notebook_obj.content|default_if_none:"No Description added yet!"|safe}}
+            {{node.content|default_if_none:"No Description added yet!"|safe}}
             </div>
         </div>
     </div>
     <div class="comment-sections">
-        {% get_thread_node notebook_obj.pk as thread_node %}
+        {% get_thread_node node.pk as thread_node %}
             {% if thread_node %}
                 {% get_disc_replies thread_node group_id global_disc_all_replies as all_replies %}
                 {% get_node thread_node as thread_node_obj %}
                 {% include 'ndf/gin-line-texteditor.html' with node=thread_node_obj var_name="content_org" ckeditor_toolbar="BasicToolbar" %}
             {% else %}
-                {% get_disc_replies notebook_obj.pk group_id global_disc_all_replies as all_replies %}
+                {% get_disc_replies node.pk group_id global_disc_all_replies as all_replies %}
                 {% include 'ndf/gin-line-texteditor.html' with var_name="content_org" ckeditor_toolbar="BasicToolbar" %}
             {% endif %}
     </div>
