Banner pic updates

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/upload_pic_widget.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/upload_pic_widget.html
@@ -18,15 +18,21 @@
               {% endif %}   
           {% endif %}   
         </div>
+        {% if not no_update_btn %}
         {% if request.user.is_authenticated %}
         {% check_is_gstaff groupid request.user as gstaff_access %}
         {% if "Author" in group_object.member_of_names_list and user_id == request.user.id or "Author" not in group_object.member_of_names_list and gstaff_access %}
                 <div class="row" >
                   <div class="small-12 columns" >
-                    <input type="button" class="button tiny expand margin-p5 btn-font" id="{{widget_for}}_btnUploadProfilePic"  value="{% if prof_pic_obj %}Change{% else %}Upload{% endif %}">
+                    <a data-reveal-id="{{widget_for}}_prof_pic_prop" class="button tiny expand margin-p5 btn-font" id="{{widget_for}}_btnUploadProfilePic">{% if prof_pic_obj %}Change{% else %}Upload{% endif %}</a>
                   </div>
                 </div>
             {% endif %}
+        {% endif %}
+        {% endif %}
+        </div>
+
+
             <div id="{{widget_for}}_prof_pic_prop" class="reveal-modal medium" data-reveal style="height:500px;"> 
                 <a href="#" id="{{widget_for}}_upload_photo">
                   <div id="upload-photo-div" class="text-center">
@@ -78,8 +84,6 @@
                 <a class="close-reveal-modal">&#215;</a>
             </div>
 
-        {% endif %}
-        </div>
 
 <style type="text/css">
     div.reveal-modal > label {
@@ -143,13 +147,13 @@
     })
 
   // Upload/Change Profile photo ----------------------------------------------------------------
-  $("#{{widget_for}}_btnUploadProfilePic").click(function() {
-    console.log("Change btn clicked")
+  $(document).on('click','#{{widget_for}}_btnUploadProfilePic',function(){
+    alert("Change btn clicked")
     $("#{{widget_for}}_prof_pic_prop").foundation('reveal', 'open');
   });
 
   // Cancel/Abort Profile pic Upload-------------------------------------------------------------
-  $("#{{widget_for}}_btnUploadCancel").click(function() {
+  $(document).on('click','#{{widget_for}}_btnUploadCancel',function(){
     $("#{{widget_for}}_pic_div").addClass("hide");
     $("#{{widget_for}}_upload_photo").removeClass("hide");
     $("#{{widget_for}}_existing-photo-fieldset").removeClass("hide");
@@ -157,7 +161,7 @@
   });
 
   // Upload photo btn in overlay ----------------------------------------------------------------
-  $("#{{widget_for}}_upload_photo").click(function() {
+  $(document).on('click','#{{widget_for}}_upload_photo',function(){
     console.log("demo")
     $("#{{widget_for}}_docFile").trigger("click");
     // $(this).addClass("hide")
@@ -177,7 +181,7 @@
 
 
   //Upload file action validation ---------------------------------------------------------------
-  $('#{{widget_for}}_docFile').on("change", function() {
+  $(document).on('click','#{{widget_for}}_docFile',function(){
     $("#{{widget_for}}_upload_photo").addClass("hide")
     $("#{{widget_for}}_existing-photo-fieldset").addClass("hide")
     console.log("{{widget_for}}_docFile change function")
@@ -207,7 +211,7 @@
   });
 
   // Update profile photo -----------------------------------------------------------------------
-  $("#{{widget_for}}_submitpostid").click(function() {
+  $(document).on('click','#{{widget_for}}_submitpostid',function(){
     upload_from_existing = $("#{{widget_for}}_old_pic_ele").length
     if($("#{{widget_for}}_docFile").val() != "" || upload_from_existing > 0) { 
       $("#{{widget_for}}_prof_pic_prop").foundation('reveal', 'close');
