get_visist_count: pass grou_id in url

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/analytics_views.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/analytics_views.html
@@ -14,7 +14,7 @@
 		{% endif %}
 		current_url = window.location.pathname;
 		$.ajax({
-			url: "{% url 'get_visits_count' group_obj.pk %}",
+			url: "{% url 'get_visits_count' group_id %}",
 			data: {
 				curr_url: current_url,
 				get_params: get_params,
