--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -266,7 +266,7 @@ color: black !important;
             <div class="row collapse">
               <div class="about-course-details">
                 <!--@anotation('replace this with the about course details')-->
-                <p>{{group_object.content_org}}
+                <p>{{group_object.content_org|safe}}
                 </p>
               </div>
             </div>
