--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/task_create_edit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/task_create_edit.html
@@ -275,8 +275,9 @@
   	    <div id="contentlist" class="medium-12 columns content">
           <div class="">
             <label style="margin-left: -5px;margin-bottom: -15px;">{% trans "Describe" %}</label>
-            {% include "ndf/add_editor.html" with var_name="content_org" var_placeholder="Enter the content here" var_value=node.content_org %}
-    		  </div>
+    		    
+            {% include "ndf/html_editor.html" with var_name="content_org" var_placeholder="Enter the content here" var_value=node.content|default_if_none:"" ckeditor_toolbar="GeneralToolbar" node_id=node.pk %}
+          </div>
         </div>
   	  </div>
       {% comment %}
