--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -1,8 +1,7 @@
 {% load ndf_tags %}
 {% load i18n %}
 {% load cache %}
-{% get_thread_node node.pk as thread_node %}
-{% get_attribute_value thread_node 'thread_interaction_type' as thr_int_type %}
+
 {% get_schema node as schema %}
 {% get_group_name groupid as group_name_tag %}
 <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/ckeditor.js"></script>
@@ -180,25 +179,25 @@
               {% endif %}
             </div>
           </div>
-          {% endcomment %}    
+          {% endcomment %}
+
           <!-- Code for showing media details -->
-          {% if node.mime_type  or node.collection_set %}
+          {% if node.mime_type %}
+
             {% get_grid_fs_object node as grid_fs_obj %}
 
             <!-- commenting following block which shows slider if resource is collection of all images/videos/audios -->
-              
-            {% if node.collection_set  %} 
-               <ul data-orbit data-options="variable_height: true;timer:false;">
-                  <li class="active small-12 large-columns">
-                    <center>                   
+            {% comment %}
+
+            {% if node.collection_set and node.pk|is_media_collection %}
+
+              {% if 'image' in node.mime_type or 'video' in node.mime_type %}
+                <!-- Orbit image slider only for image and video collections-->
+
                     {% if 'image' in node.mime_type %}
-                    <a class="th">
-                      <img style="min-height:200px;" src="{% url 'get_mid_size_img' group_name_tag node.pk %}" /> 
+                    <a class="th" target="_blank" href="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
+                      <img style="min-height:200px;" src="{% url 'get_mid_size_img' group_name_tag node.pk %}" />
                       </a>
-                     {% elif 'audio' in node.mime_type %}
-                          <audio  src="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}" controls loop>
-                          <p>{% trans 'Your browser does not support the audio element' %} </p>
-                      </audio><br><br><br>
                     {% elif 'video' in node.mime_type %}
                      <video width="768" height="432" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{ "autoplay": false, "preload": "metadata" }' poster="{% url 'getvideoThumbnail' group_name_tag node %}" controls buffered>
                         <source src="{% url 'getFullvideo' group_name_tag node %}" type="video/mp4">
@@ -214,66 +213,51 @@
                         {% trans "Your browser does not support the video tag." %}
                       </video>
                     {% endif %}
-                    <div class="orbit-caption"> {{node.name}} </div>             
-                  </li>                
 
-                  {% for k in node.collection_set %}
-                    {% get_node k as obj %}
-                    {% get_grid_fs_object obj as grid_fs_obj %}
-                    {% if 'image' in obj.mime_type or 'video' in obj.mime_type or 'audio' in obj.mime_type or 'pdf' in obj.mime_type %}
-                    <li>
-                      <center>
-                        {% if 'image' in obj.mime_type %}
-                        <a class="th">
-                          <img src="{% url 'get_mid_size_img' group_name_tag k %}" style="min-height:200px;"/> 
+
+                <!-- End of slider -->
+              {% else %}
+                  {% if 'audio' in node.mime_type %}
+                    <audio src="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}" controls loop>
+                      <p>{% trans 'Your browser does not support the audio element' %} </p>
+                    </audio>
+                  {% elif 'html' in node.mime_type %}
+                    <iframe id="html-res-iframe" width="100%" seamless="seamless" src="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
+                      <p>{% trans 'Your browser does not support the audio element' %} </p>
+                    </iframe>
+                    {% elif 'pdf' in node.mime_type %}
+                        <iframe width="100%" style="height:90vh;" src="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={% url 'read_file' group_name_tag node grid_fs_obj.filename %}"></iframe>
+                        <br/>
+                        <a target="_blank" href="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
+                          <center>
+                            <figcaption style="position:relative;top:0;left:0" title="Click Here to View Image in Full Screen">{% trans 'View in full screen' %}
+                             <i class="fi-projection-screen"> </i>
+                            </figcaption>
+                          </center>
                         </a>
-                         {% elif 'audio' in obj.mime_type %}
-                            <audio src="{% url 'read_file' group_name_tag k grid_fs_obj.filename %}" controls loop>
-                            <p>{% trans 'Your browser does not support the audio element' %} </p>
-                          </audio><br><br><br><br><br><br>
-                        {% elif 'pdf' in obj.mime_type %}
-                          <iframe width="100%" style="height:90vh;" src="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={% url 'read_file' group_name_tag k grid_fs_obj.filename %}"></iframe>
-                          <br/>
-                        {% elif 'Pandora_video' in obj.member_of_names_list %}
-                          {% get_source_id k as source_id %}
-                          <!-- <video width="480px" poster="http://wetube.gnowledge.org/{{source_id}}/icon128.jpg" controls> -->
-                          <video width="500" poster="http://wetube.gnowledge.org/{{source_id}}/icon128.jpg" controls>
-                            <source src="http://wetube.gnowledge.org/{{source_id}}/480p.webm" type="video/webm"> 
-                            {% trans "Your browser does not support the video tag." %}
-                          </video>  
-                        {% elif 'video' in obj.mime_type %}
-                          <video width="768" height="432" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{ "autoplay": false, "preload": "metadata" }' poster="{% url 'getvideoThumbnail' group_name_tag node %}" controls buffered>
-
-                            <source src="{% url 'getFullvideo' group_name_tag k %}" type="video/webm">
-                            <source src="{% url 'getFullvideo' group_name_tag k %}" type="video/ogg">    
-                            <source src="{% url 'getFullvideo' group_name_tag k %}" type="video/mp4">    
-                            {% trans "Your browser does not support the video tag." %}
-                          </video>                    
-                        {% endif %}    
-                        <div class="orbit-caption"> {{obj.name}} </div> 
-                      </center>
-                    </li>
-                    {% endif %} 
-
-                  {% endfor %}
-                </ul>   
+                  {% else %}
+                    <a href="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
+                      {{ grid_fs_obj.filename }}
+                    </a>
+                  {% endif %}
+              {% endif %}
               <!-- end of if 'image' in node.mime_type ... -->
 
+            {% else %}
+            {% endcomment %}
 
             <!-- END of commenting following block which shows slider if resource is collection of all images/videos/audios -->
 
 
-              {% endif %}             
               <!-- not a collection -->
               {% if not topic %}
                 <h3 class="text-gray">{{node.name}}:</h3>
               {% endif %}
-              
-              {% if 'image' in node.mime_type  and not node.collection_set %}
-              
+
+              {% if 'image' in node.mime_type %}
                <center>
                 <div class="show-image">
-                  <a class="th {% if node.collection_set %}collection-exists{% endif %}" data-oid="{{node.pk|safe}}">
+                  <a class="th {% if node.collection_set %}collection-exists{% endif %}"   data-oid="{{node.pk|safe}}">
                     <img  src="{% url 'get_mid_size_img' group_name_tag node.pk %}" style="min-height:200px;" />
 
                   </a>
@@ -291,7 +275,7 @@
                   <source src="http://wetube.gnowledge.org/{{source_id}}/480p.webm" type="video/webm">
                   {% trans "Your browser does not support the video tag." %}
                 </video>
-              {% elif 'video' in node.mime_type and not node.collection_set %}
+              {% elif 'video' in node.mime_type %}
 
               {% comment "commented getting video from wetube" %}
                 {% get_source_id node.pk as source_id %}
@@ -310,15 +294,15 @@
                   <source src="{% url 'getFullvideo' group_name_tag node %}" type="{{node.mime_type}}">
                   {% trans "Your browser does not support the video tag." %}
                 </video>
-              {% elif 'audio' in node.mime_type and not node.collection_set %}
+              {% elif 'audio' in node.mime_type %}
                 <audio src="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}" controls loop>
                   <p>{% trans 'Your browser does not support the audio element' %} </p>
                 </audio>
-              {% elif 'html' in node.mime_type and not node.collection_set %}
+              {% elif 'html' in node.mime_type %}
                 <iframe id="html-res-iframe" width="100%" seamless="seamless" src="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
                   <p>{% trans 'Your browser does not support the audio element' %} </p>
                 </iframe>
-              {% elif 'pdf' in node.mime_type and not node.collection_set %}
+              {% elif 'pdf' in node.mime_type %}
                 <iframe width="100%" style="height:90vh;" src="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={% url 'read_file' group_name_tag node grid_fs_obj.filename %}"></iframe>
                 <br/>
                 <center>
@@ -331,7 +315,7 @@
                 </a>
 
 
-              {% elif 'epub' in node.mime_type and not node.collection_set %}
+              {% elif 'epub' in node.mime_type %}
                 {% comment %}
 
                 <script type="text/javascript" src="/static/ndf/bower_components/epub.js/build/epub.js"></script>
@@ -505,7 +489,6 @@
                   Download
                 </a>
 
-               {% comment %}
                {% get_gstudio_social_share_resource as social_share %}
                   {% if social_share %}
                     <span>
@@ -514,8 +497,8 @@
                         </a>
                       </span>
                   {% endif %}
-              {% endcomment %}
               {% endif %}
+
           {%  else %}
             {% if node.mime_type %}
               {% if 'video' in node.mime_type  %}
@@ -547,21 +530,23 @@
                 <div class="content large-6 columns" id="view-discussion" >
                   <!-- discussion content area -->
                   {% if node.discussion_enable %}
-                    
+                    {% get_thread_node node.pk as thread_node %}
                     {% if thread_node %}
-                          {% get_disc_replies thread_node group_id global_disc_all_replies as all_replies %}
-                          {% get_node thread_node as thread_node_obj %}
-                          {% include 'ndf/in-line-texteditor.html' with node=thread_node_obj var_name="content_org" ckeditor_toolbar="BasicToolbar" %}
+                        {% get_disc_replies thread_node group_id global_disc_all_replies as all_replies %}
+                        {% get_node thread_node as thread_node_obj %}
+                        {% include 'ndf/in-line-texteditor.html' with node=thread_node_obj var_name="content_org" ckeditor_toolbar="BasicToolbar" %}
                     {% else %}
                         {% get_disc_replies node.pk group_id global_disc_all_replies as all_replies %}
                         {% include 'ndf/in-line-texteditor.html' with var_name="content_org" ckeditor_toolbar="BasicToolbar" %}
                     {% endif %}
                   {% endif %}
+
                   <!-- END of discussion content area -->
                 </div>
               {% endif %}
           <br/>
           {% endif %}
+
           <div>
             {% get_grid_fs_object each_node as grid_fs_obj %}
             {% if "Group" in node.member_of_names_list %}
