Calculate points-score of user and display in course overview

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_analytics.html
@@ -58,7 +58,7 @@
         </div>
         <div class="columns small-12 medium-6">
           <h5>Total points gained</h5>
-          <span class="course-metric-count">167</span>
+          <span class="course-metric-count users_points"></span>
           <div class="course-points-breakup">
 
           </div>
