--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -131,8 +131,9 @@
                                 <div class="content" id="image-info">
                                     <span>Created At: </span>{{node.created_at}}<br>
                                     <span>Uploader: </span>{{node.created_by|get_username}}<br>
-                                    <span>Format: </span>{{node.mime_type}}<br>
-                                    <span>Size: </span>{{node.file_size.size}}{{node.file_size.unit}}>
+                                    <span>Format: </span>{{node.if_file.mime_type}}<br>
+                                    {% get_file_size node as node_file_size %}
+                                    <span>Size: </span>{% if node_file_size %}{{node_file_size|filesizeformat}}{% endif %}
                                 </div>
                                 <div class="content active" id="image-comments">
                                     <div class="row comments-area">
