--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -88,7 +88,7 @@
     {% endfor %}
     {% if node|is_File %}
     <meta  itemprop="{{schema.1.size}}" content="{{node.file_size.size}} " >
-    <meta  itemprop="{{schema.1.format}}" content="{{node.mime_type}}" >
+    <meta  itemprop="{{schema.1.format}}" content="{{node.if_file.mime_type}}" >
     {% endif %}
   {% endif %}
 
@@ -116,6 +116,7 @@
 
     {% get_download_filename node as download_filename %}
     <a href="{% url 'read_file' group_name_tag node.pk download_filename %}">sample filehive download link</a>
+    {{MEDIA_URL}}
     {% if topic %}
       {% get_filters_data "Topics" as filter_dict %}
 
@@ -172,7 +173,7 @@
                 <h6>This resource assesses these</h6>
                 {% for  each_node in assesses_list %}
                 {% get_grid_fs_object each_node as grid_fs_obj %}
-                {% if each_node.mime_type %}
+                {% if each_node.if_file.mime_type %}
                 <a href="{% url 'read_file' group_name_tag each_node.pk  grid_fs_obj.filename %}">{{ each_node.name }}</a>,&nbsp;
                 {% else %}
                 <a href="{% url 'page_details' group_name_tag each_node.pk %}">{{ each_node.name }}</a>,&nbsp;
@@ -185,7 +186,7 @@
           {% endcomment %}
 
           <!-- Code for showing media details -->
-          {% if node.mime_type %}
+          {% if node.if_file.mime_type %}
 
             {% get_grid_fs_object node as grid_fs_obj %}
 
@@ -194,19 +195,19 @@
 
             {% if node.collection_set and node.pk|is_media_collection %}
 
-              {% if 'image' in node.mime_type or 'video' in node.mime_type %}
+              {% if 'image' in node.if_file.mime_type or 'video' in node.if_file.mime_type %}
                 <!-- Orbit image slider only for image and video collections-->
 
-                    {% if 'image' in node.mime_type %}
+                    {% if 'image' in node.if_file.mime_type %}
                     <a class="th" target="_blank" href="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
                       <img style="min-height:200px;" src="{% url 'get_mid_size_img' group_name_tag node.pk %}" />
                       </a>
-                    {% elif 'video' in node.mime_type %}
+                    {% elif 'video' in node.if_file.mime_type %}
                      <video width="768" height="432" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{ "autoplay": false, "preload": "metadata" }' poster="{% url 'getvideoThumbnail' group_name_tag node %}" controls buffered>
                         <source src="{% url 'getFullvideo' group_name_tag node %}" type="video/mp4">
                         <source src="{% url 'getFullvideo' group_name_tag node %}" type="video/webm">
                         <source src="{% url 'getFullvideo' group_name_tag node %}" type="video/ogg">
-                        <source src="{% url 'getFullvideo' group_name_tag node %}" type="{{node.mime_type}}">
+                        <source src="{% url 'getFullvideo' group_name_tag node %}" type="{{node.if_file.mime_type}}">
                         {% trans "Your browser does not support the video tag." %}
                       </video>
                     {% elif 'Pandora_video' in node.member_of_names_list %}
@@ -220,18 +221,18 @@
 
                 <!-- End of slider -->
               {% else %}
-                  {% if 'audio' in node.mime_type %}
+                  {% if 'audio' in node.if_file.mime_type %}
                     <audio src="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}" controls loop>
                       <p>{% trans 'Your browser does not support the audio element' %} </p>
                     </audio>
-                  {% elif 'html' in node.mime_type %}
+                  {% elif 'html' in node.if_file.mime_type %}
                     <iframe id="html-res-iframe" width="100%" seamless="seamless" src="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
                       <p>{% trans 'Your browser does not support the audio element' %} </p>
                     </iframe>
-                    {% elif 'pdf' in node.mime_type %}
-                        <iframe width="100%" style="height:90vh;" src="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={% url 'read_file' group_name_tag node grid_fs_obj.filename %}"></iframe>
+                    {% elif 'pdf' in node.if_file.mime_type %}
+                        <iframe width="100%" style="height:90vh;" src="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={% url 'read_file' group_name_tag node.pk download_filename %}"></iframe>
                         <br/>
-                        <a target="_blank" href="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
+                        <a target="_blank" href="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={% url 'read_file' group_name_tag node.pk download_filename %}">
                           <center>
                             <figcaption style="position:relative;top:0;left:0" title="Click Here to View Image in Full Screen">{% trans 'View in full screen' %}
                              <i class="fi-projection-screen"> </i>
@@ -257,15 +258,15 @@
                 <h3 class="text-gray">{{node.name}}:</h3>
               {% endif %}
 
-              {% if 'image' in node.mime_type %}
+              {% if 'image' in node.if_file.mime_type %}
                <center>
                 <div class="show-image">
                   <a class="th {% if node.collection_set %}collection-exists{% endif %}"   data-oid="{{node.pk|safe}}">
-                    <img  src="{% url 'get_mid_size_img' group_name_tag node.pk %}" style="min-height:200px;" />
+                    <img  src=" {{MEDIA_URL}}{{node.if_file.original.relurl}} " style="min-height:200px;" />
 
                   </a>
                   <figcaption style="position:relative;top:0;left:0" title="Click Here to View Image in Full Screen">
-                      <a  target="_blank" href="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
+                      <a  target="_blank" href="{% url 'read_file' group_name_tag node.pk download_filename %}">
                          View in Full Screen
                          <i class="fi-projection-screen"> </i>
                     </figcaption>
@@ -278,7 +279,7 @@
                   <source src="http://wetube.gnowledge.org/{{source_id}}/480p.webm" type="video/webm">
                   {% trans "Your browser does not support the video tag." %}
                 </video>
-              {% elif 'video' in node.mime_type %}
+              {% elif 'video' in node.if_file.mime_type %}
 
               {% comment "commented getting video from wetube" %}
                 {% get_source_id node.pk as source_id %}
@@ -291,26 +292,26 @@
               {% endcomment %}
 
                 <video width="768" height="432" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{ "autoplay": false, "preload": "metadata" }' poster="{% url 'getvideoThumbnail' group_name_tag node %}" controls buffered>
-                  <source src="{% url 'getFullvideo' group_name_tag node %}" type="video/mp4">
-                  <source src="{% url 'getFullvideo' group_name_tag node %}" type="video/webm">
-                  <source src="{% url 'getFullvideo' group_name_tag node %}" type="video/ogg">
-                  <source src="{% url 'getFullvideo' group_name_tag node %}" type="{{node.mime_type}}">
+                  <source src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" type="video/mp4">
+                  <source src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" type="video/webm">
+                  <source src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" type="video/ogg">
+                  <source src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" type="{{node.if_file.mime_type}}">
                   {% trans "Your browser does not support the video tag." %}
                 </video>
-              {% elif 'audio' in node.mime_type %}
-                <audio src="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}" controls loop>
+              {% elif 'audio' in node.if_file.mime_type %}
+                <audio src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" controls loop>
                   <p>{% trans 'Your browser does not support the audio element' %} </p>
                 </audio>
-              {% elif 'html' in node.mime_type %}
-                <iframe id="html-res-iframe" width="100%" seamless="seamless" src="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
+              {% elif 'html' in node.if_file.mime_type %}
+                <iframe id="html-res-iframe" width="100%" seamless="seamless" src="{{MEDIA_URL}}{{node.if_file.original.relurl}}">
                   <p>{% trans 'Your browser does not support the audio element' %} </p>
                 </iframe>
-              {% elif 'pdf' in node.mime_type %}
+              {% elif 'pdf' in node.if_file.mime_type %}
                 <iframe width="100%" style="height:90vh;" src="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={% url 'read_file' group_name_tag node grid_fs_obj.filename %}"></iframe>
                 <br/>
                 <center>
                    <figcaption style="position:relative;top:0;left:0" title="Click Here to View Image in Full Screen">
-                       <a target="_blank" href="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
+                       <a target="_blank" href="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={{MEDIA_URL}}{{node.if_file.original.relurl}}">
                       {% trans 'View in full screen' %} <i class="fi-projection-screen"> </i><a>
                    </figcaption>
                 </center>
@@ -318,7 +319,7 @@
                 </a>
 
 
-              {% elif 'epub' in node.mime_type %}
+              {% elif 'epub' in node.if_file.mime_type %}
                 {% comment %}
 
                 <script type="text/javascript" src="/static/ndf/bower_components/epub.js/build/epub.js"></script>
@@ -404,8 +405,8 @@
                 {% endcomment %}
 
               {% else %}
-                <a href="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}">
-                  {{ grid_fs_obj.filename }}
+                <a href="{{MEDIA_URL}}{{node.if_file.original.relurl}}">
+                  {{node.name}}
                 </a>
               {% endif %}
 
@@ -420,7 +421,7 @@
               {% comment %}
               {% if 'Pandora_video' in node.member_of_names_list %}
                 <a class="button small secondary" href="http://wetube.gnowledge.org/{{video_obj}}/480p.webm" download="480.webm">
-              {% elif 'video' in node.mime_type %}
+              {% elif 'video' in node.if_file.mime_type %}
               {% endcomment %}
 
             {% endif %}
@@ -483,8 +484,8 @@
                 </br>
           {% if user.is_authenticated %}
 
-            {% if node.mime_type %}
-              {% if 'video' in node.mime_type  %}
+            {% if node.if_file.mime_type %}
+              {% if 'video' in node.if_file.mime_type  %}
                 <a class="button tiny" title="Click here to Download" href="{% url 'getFullvideo' group_name_tag node %}" download="{{ grid_fs_obj.filename }}">
               {% else %}
                 <a class="button tiny" title="Click here to Download" href="{% url 'read_file' group_name_tag node grid_fs_obj.filename %}" download="{{ grid_fs_obj.filename }}">
@@ -503,8 +504,8 @@
               {% endif %}
 
           {%  else %}
-            {% if node.mime_type %}
-              {% if 'video' in node.mime_type  %}
+            {% if node.if_file.mime_type %}
+              {% if 'video' in node.if_file.mime_type  %}
                 <a class="button tiny disabled secondary" title="Please login to download" href="{% url 'auth_login' %}{% if not is_ac_url %}?next={{request.path}}{% endif %}" accesskey="l">
               {% else %}
                 <a class="button tiny disabled secondary" title="Please login to download" href="{% url 'auth_login' %}{% if not is_ac_url %}?next={{request.path}}{% endif %}" accesskey="l">
