--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
@@ -48,10 +48,10 @@
     {% get_dict_from_list_of_dicts resource.attribute_set as attr_set_dict %}
 
     {% get_relation_value resource.pk 'has_thumbnail' as grel_dict %}
-    {% if not grel_dict.cursor and grel_dict.grel_node and grel_dict.grel_node.fs_file_ids.1 %}
-        <img src="{% url 'get_gridfs_resource' grel_dict.grel_node.fs_file_ids.2 %}" alt="" />
-    {% elif resource.if_file.thumbnail.relurl %}
+    {% if resource.if_file.thumbnail.relurl %}
         <img src="{{MEDIA_URL}}{{resource.if_file.thumbnail.relurl}}">
+    {% elif not grel_dict.cursor and grel_dict.grel_node and grel_dict.grel_node.fs_file_ids.1 %}
+        <img src="{% url 'get_gridfs_resource' grel_dict.grel_node.fs_file_ids.2 %}" alt="" />
     {% elif resource.fs_file_ids.2 and not 'video' in resource.mime_type %}
       <img src="{% url 'get_mid_size_img' first_arg second_arg %}" alt="">
     {% elif resource.fs_file_ids.1 %}
@@ -61,8 +61,8 @@
         <i class="{{attr_set_dict.educationaluse|lower}}"></i>
       {% elif resource.fs_file_ids.0 and 'image' in resource.mime_type %}
         <img src="{% url 'get_mid_size_img' first_arg second_arg %}" alt="">
-      {% elif resource.mime_type %}
-        <i class="{{resource.mime_type|lower|split:'/'|join:' '}}"></i>
+      {% elif resource.if_file.mime_type %}
+        <i class="{{resource.if_file.mime_type|lower|split:'/'|join:' '}}"></i>
       {% else  %}
         <i class="{{resource.member_of_names_list.0|lower }}"></i>
       {% endif %}
