--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -132,8 +132,8 @@
                                     <span>Created At: </span>{{node.created_at}}<br>
                                     <span>Uploader: </span>{{node.created_by|get_username}}<br>
                                     <span>Format: </span>{{node.if_file.mime_type}}<br>
-                                    {% get_file_size node as node_file_size %}
-                                    <span>Size: </span>{% if node_file_size %}{{node_file_size|filesizeformat}}{% endif %}
+                                    {% get_file_obj node as node_file %}
+                                    <span>Size: </span>{% if node_file %}{{node_file.length|filesizeformat}}{% endif %}
                                 </div>
                                 <div class="content active" id="image-comments">
                                     <div class="row comments-area">
