templates changed for create note with all mime types

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_create_note.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_create_note.html
@@ -175,9 +175,9 @@
     		setTimeout(function()
     			{ 
 					{% for each in fetch_res %}
-						{% if "img" in each %}
-    						CKEDITOR.instances['ckeditor_textarea'].insertHtml('<img width=50% src={{each}} > </img>'); 
-					{% endif %}
+						{% if "media" in each %}
+    						CKEDITOR.instances['ckeditor_textarea'].insertHtml('<img width="50%" src="{{each}}"> </img></br>'); 
+						{% endif %}
 			    {% endfor %}
     			},3000);
 </script>
