--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
@@ -23,7 +23,7 @@
 
   </style>
 <div class="scard-container" data-id="{{resource.pk}}">
- <div class="scard" data-mime-type="{{resource.if_file.mime_type}}" original-src="{% if 'video' in resource.if_file.mime_type   %}{{MEDIA_URL}}{{resource.if_file.mid.relurl}}{% else %}{{resource.if_file.original.relurl}}{% endif %}">
+ <div class="scard" data-mime-type="{{resource.if_file.mime_type}}" original-src="{% if 'video' in resource.if_file.mime_type   %}{{MEDIA_URL}}{{resource.if_file.mid.relurl}}{% else %}{{MEDIA_URL}}{{resource.if_file.original.relurl}}{% endif %}">
  {% if is_event %}
   {% get_event_status resource as event_status_msg %}
   {% if event_status_msg %}
